@@ -1,5 +1,7 @@
 2.4.3 Released ??? October 2018
 
+* Add mask for EPS export. Note, mask angles are reduced to 45*(0,1,...7) degrees for reducing pattern size in the EPS.
+* Update default masks: '*' become dot, '^' become bricks, 'd' become plus, 'D' become tacks, ';' and 'j' change lengths. Note, you can use brush.ods to prepare user-defined masks.
 * Add styles '^' and '_' for command 'smooth' to find upper/lower bound of the data.
 * Improve FlowP() to draw both branches (in positive and negative time direction).
 * Improve CGI interface and update website.
